[gd_scene load_steps=15 format=3 uid="uid://b8r4ysbe4db2k"]

[ext_resource type="Script" uid="uid://crncpnxx8o8uv" path="res://scripts/red_enemy.gd" id="1_148ah"]
[ext_resource type="Texture2D" uid="uid://vsof2tpv2pcu" path="res://assets/sprites/slime_purple.png" id="1_uu8uc"]
[ext_resource type="PackedScene" uid="uid://v1qwwaj2r6j4" path="res://scenes/game_components/killzone.tscn" id="3_8b0hc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_148ah"]
atlas = ExtResource("1_uu8uc")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b0hc"]
atlas = ExtResource("1_uu8uc")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mknkj"]
atlas = ExtResource("1_uu8uc")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_k31cx"]
atlas = ExtResource("1_uu8uc")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjdjm"]
atlas = ExtResource("1_uu8uc")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm58t"]
atlas = ExtResource("1_uu8uc")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbhqp"]
atlas = ExtResource("1_uu8uc")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6fuf"]
atlas = ExtResource("1_uu8uc")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_wnxoj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_148ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b0hc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mknkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k31cx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjdjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm58t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbhqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6fuf")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fq163"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mknkj"]
radius = 6.0

[node name="RedSlime" type="CharacterBody2D"]
position = Vector2(0, -12)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_148ah")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wnxoj")
animation = &"walk"
autoplay = "walk"
frame = 2
frame_progress = 0.191449
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_fq163")

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-4, 5)
target_position = Vector2(-4, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(3, 5)
target_position = Vector2(4, 0)

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Killzone" parent="." node_paths=PackedStringArray("my_body") instance=ExtResource("3_8b0hc")]
my_body = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_mknkj")
debug_color = Color(0.974447, 0, 0.426708, 0.42)

[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
